# eccodes-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  buildconfig  builder.py  pytest.ini  setup.cfg  setup.py  setup_windows.py  tox.ini
.github/: ci-hpc-config.yml
.github/workflows/: build-wheel-linux.yml  build-wheel-macos-arm.yml  build-wheel-macos.yml  build-wheel-windows.yml  cd.yml  check-and-publish.yml  ci.yml  on-push.yml  reusable-ci-hpc.yml  sync.yml
ci/: requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-docs.yml  requirements-py27.yml  requirements-py35.yml  requirements-py36-old.yml  requirements-py36-qc.yml  requirements-py36.yml  requirements-py37.yml  requirements-tests.txt
docs/: bindings.rst  conf.py  index.rst  messages.rst
eccodes/: __init__.py  __main__.py  _eccodes.cc  bindings.py  eccodes.py  messages.py
eccodes/high_level/: __init__.py  bufr.py  codesfile.py  codesmessage.py  gribfile.py  gribindex.py  gribmessage.py  pygrib.pyx
eccodes/highlevel/: __init__.py  message.py  reader.py
gribapi/: __init__.py  bindings.py  eccodes.h  errors.py  grib_api.h  grib_api_prototypes.h  gribapi.py
scripts/: build-linux.sh  build-macos.sh  build-windows.sh  common.sh  copy-dlls.py  copy-licences.py  requirements.txt  select-python-linux.sh  select-python-macos.sh  select-python.sh  test-linux.sh  test-macos.sh  versions.sh  wheel-linux.sh  wheel-macos.sh  wheel-windows.sh
tests/: environment.yml  test_10_bindings.py  test_15_eccodes.py  test_20_main.py  test_20_messages.py  test_bufr_data.py  test_bufr_examples.py  test_bufr_header.py  test_bufr_helpers.py  test_bufr_message.py  test_bufr_workarounds.py  test_eccodes.py  test_high_level_api.py  test_highlevel.py  test_pygrib.py
tests/examples/: attributes.py  items.py
tests/sample-data/: acars.attributes  acars.bufr  acars.items  ahi-himawari-8.attributes  ahi-himawari-8.bufr  ahi-himawari-8.items  amsu-a-noaa-19.attributes  amsu-a-noaa-19.bufr  amsu-a-noaa-19.items  amv-goes-9.attributes  amv-goes-9.bufr  amv-goes-9.items  amv-insat-3d.attributes  amv-insat-3d.bufr  amv-insat-3d.items  amv-meteosat-9.attributes  amv-meteosat-9.bufr  amv-meteosat-9.items  amv-noaa-20.attributes  amv-noaa-20.bufr  amv-noaa-20.items  aura-omi-ak.attributes  aura-omi-ak.bufr  aura-omi-ak.items  buoy-drifting.attributes  buoy-drifting.bufr  buoy-drifting.items  geos-abi-goes-16.attributes  geos-abi-goes-16.bufr  geos-abi-goes-16.items  geos-mviri-meteosat-7.attributes  geos-mviri-meteosat-7.bufr  geos-mviri-meteosat-7.items  hdob.attributes  hdob.bufr  hdob.items  rwp.attributes  rwp.bufr  rwp.items  rwp_jma.attributes  (+23 more)
(+14 files in other folders)
