[metadata]
description = "eccodes"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = "European Centre for Medium-Range Weather Forecasts (ECMWF)"
author_email = "software.support@ecmwf.int"
keywords = ecCodes, GRIB, BUFR
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent

[aliases]
test = pytest

[tool:pytest]
norecursedirs =
    build
    dist
    .tox
    .docker-tox
    .eggs
pep8maxlinelength = 99
mccabe-complexity = 11
filterwarnings =
    ignore::FutureWarning
pep8ignore =
    * E203 W503
    */__init__.py E402
    eccodes/eccodes.py ALL
    gribapi/errors.py ALL
    gribapi/gribapi.py E501
flakes-ignore =
    */__init__.py UnusedImport
    */__init__.py ImportStarUsed
    eccodes/eccodes.py ALL
    eccodes/high_level/* ALL
    gribapi/errors.py ALL

[coverage:run]
branch = True

[zest.releaser]
python-file-with-version = gribapi/bindings.py
